# jni_QQ

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jniqq/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_jniqq_MainActivity.h  native-lib.cpp
app/src/main/java/com/example/jniqq/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jniqq/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
